fixed spacing in profile

--- a/app/assets/stylesheets/components/_info_card.scss
+++ b/app/assets/stylesheets/components/_info_card.scss
@@ -57,7 +57,7 @@
 .info_card__body {
   padding: 15px 15px;
     p {
-      line-height: 40px;
+      line-height: 25px;
       opacity: .93;
   }
 }
